# TopHumanWriting

./: .gitignore  MANIFEST.in  README.md  UX_SPEC.md  UX_SPEC_WEB.md  ai_paper_to_check.md  ai_word_detector.py  build.bat  build_release_web.bat  download_llama_server.py  download_llm_assets.bat  download_llm_model.py  download_models.bat  download_semantic_model.py  i18n.py  plan.md  pyproject.toml  requirements.txt  run_dev.bat  run_web.bat  setup_env.bat  start_web.vbs  uiux_tokens.json  version.py
aiwd/: __init__.py  audit.py  citation_bank.py  cite_check.py  llama_server.py  llm_budget.py  llm_review.py  materials.py  oa_lookup.py  openai_compat.py  polish.py  rag_index.py  report.py  review_coverage.py
aiwd/citeextract/: __init__.py  citation.py  pdf_text.py  pipeline.py  references.py  sentence_split.py  text_clean.py
articles/: TopHumanWriting.md
examples/: sample_paper_capm.md
locales/: en.json  zh_CN.json
scripts/: build_vocab_library.py  refresh_lexical_stats.py  refresh_llm_reviews.py  run_audit_export.py
tests/: test_api.py  test_audit.py  test_cite_check.py  test_citeextract_pipeline.py  test_library_kind.py  test_llm_review.py  test_materials.py  test_report.py
tophumanwriting/: __init__.py  _version.py  api.py  cli.py  i18n.py  library.py  models.py  runner.py  workspace.py
tophumanwriting/locales/: en.json  zh_CN.json
webapp/: app.py  launch.py
webapp/static/: app.css  app.js  index.html  loading.html
word_lists/: ai_transitions.json  ai_words_zh.json
